UtahLiveDataTest/src/objects/Deliverable__c.object
<CustomObject>
    <description>[Business] Deliverable for a Grant/Award</description>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryInstruction__c</fullName>
        <description>Delivery Instruction</description>
        <label>Delivery Instruction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeliveryReference__c</fullName>
        <description>Delivery Reference</description>
        <label>Delivery Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Deliverable Item</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>Due Date for Deliverable to complete</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HideEditAndDelete__c</fullName>
        <formula>NOT(ISPICKVAL(Award__r.Status__c , &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditAndDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PointOfContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>POC for Deliverable</description>
        <label>Point of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity of Deliverable</description>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Deliverable</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yet to Start</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of Deliverable</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Deliverable</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Buildings</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Publications</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfMeasurement__c</fullName>
        <label>Unit of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Persons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deliverable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Title__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Award__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEL-{0000}</displayFormat>
        <label>Deliverable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>